# financial_data_synthesizer

./: README.md  check_data.ipynb  data_engineer_QA.txt  pyproject.toml  requirements.txt
data/: candidate_assignment_data_synthesizer.docx  example_data_scenarios.docx  grading_rubric_data_synthesizer.docx  sample_schema.json  sample_schema.sql  sample_schema_full.json
financial_data_synthesizer/: __init__.py  cli.py  ddl.py  exporters.py  faker_bridge.py  json_values.py  models.py  parsers.py  scenario_templates.py  schema_from_scenario.py  sdv_integration.py  synthesis.py  topology.py
financial_data_synthesizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
financial_data_synthesizer/business_rules/: __init__.py  credit_risk_rules.py  crm_rules.py  engine.py  trading_rules.py
notebooks/: pq_crm_quicklook.ipynb
scripts/: validate_pq_crm.py
tests/: test_business_rules.py  test_faker_sdv.py  test_parsers.py  test_schema_sql_codes.py  test_synthesis.py
